# WasiNn_Executor

./: Cargo.toml  README.md
.cargo/: config.toml
action-builder/: Cargo_template.toml
action-builder/src/: lib.rs
actions/: compile.sh  pytorch_image_classification.rs
benchmarks/image-classification/: benchmark.py  config_full.json  config_small copy.json  config_small.json  join_results.py
crates/common/: Cargo.toml
crates/common/src/: lib.rs  nn_utils.rs  types.rs  utils.rs
crates/wasi-nn/: Cargo.toml  build.rs
crates/wasi-nn/src/: witx.rs
crates/wasmtime_nn/: Cargo.toml
crates/wasmtime_nn/src/: lib.rs  wasmtime.rs
examples/LLM/: config_full.json  test.py
examples/image-classification/: test.py
examples/image-classification/datasets/: flicker_urls.txt
src/: handlers.rs
