[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
zip.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
fasthash.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-nn.workspace = true